[package]
name = "firmware-controller"
description = "Controller to centralize interaction with HW in a firmware"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["extra-traits", "fold", "full"] }

[dev-dependencies]
heapless = { version = "0.7", default-features = false }
futures = { version = "0.3", default-features = false, features = [
    "async-await",
] }
embassy-sync = { git = "https://github.com/jucr-io/embassy/" }
embassy-executor = { git = "https://github.com/jucr-io/embassy/", features = [
    "task-arena-size-32768",
    "arch-std",
    "executor-thread",
    "defmt",
    "integrated-timers",
] }
embassy-time = {  git = "https://github.com/jucr-io/embassy/", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
