[package]
name = "firmware-controller"
description = "Controller to decouple interactions between components in a no_std environment."
version = "0.1.0"
edition = "2021"
authors = ["JUCR GmbH <engineering@jucr.com>"]
license = "MIT"
repository = "https://github.com/jucr-io/firmware-controller/"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["extra-traits", "fold", "full"] }

[dev-dependencies]
heapless = { version = "0.7", default-features = false }
futures = { version = "0.3", default-features = false, features = [
    "async-await",
] }
embassy-sync = { git = "https://github.com/jucr-io/embassy/" }
embassy-executor = { git = "https://github.com/jucr-io/embassy/", features = [
    "task-arena-size-32768",
    "arch-std",
    "executor-thread",
    "defmt",
    "integrated-timers",
] }
embassy-time = { git = "https://github.com/jucr-io/embassy/", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
